# waterlog

./: README.md  pyproject.toml
src/waterlog/: __init__.py  core.py  core.pyi  methods.py  methods.pyi
